# myaiproxy

./: .gitignore  config.sample.yaml  config.yaml  pyproject.toml
.githooks/: pre-commit
scripts/: setup-hooks.sh
src/: config.py  main.py
src/plugins/: abc.py  interface.py  loader.py  pipeline.py
src/plugins/builtin/: extra_body.py  static.py
src/web/: di.py  endpoints.py
